# wotw-seedgen

./: Cargo.toml
assets/: loc_data.csv  state_data.csv  uber_state_dump.json  write_presets.bat
assets/dangerous/: 1_lost.wotwrs  1_lost.wotws  2_strength.wotwrs  2_strength.wotws  3_courage.wotwrs  3_courage.wotws  4_wisdom.wotwrs  ability_cells.wotwrs  ability_cells.wotws  achievements.wotwrs  achievements.wotws  bind_pointer.wotwrs  bind_pointer.wotws  corruption_check.wotwrs  corruption_check.wotws  credits.wotwrs  credits.wotws  custom_seeds.wotws  difficulty_select.wotwrs  difficulty_select.wotws  easter_eyestone.wotwrs  easter_eyestone.wotws  fancy_strings.wotws  hand_to_hand.wotwrs  hand_to_hand.wotws  hints.wotwrs  items.wotwrs  items.wotws  lupo_secrets.wotwrs  lupo_secrets.wotws  main.wotwrs  main.wotws  mapstone_fragments.wotwrs  mapstone_fragments.wotws  opher_lessons.wotwrs  opher_lessons.wotws  pendant.wotwrs  reset.wotwrs  shared_states.wotwrs  timer.wotwrs  (+5 more)
assets/snippets/: autoplants.wotwrs  better_stomp.wotwrs  better_wellspring.wotwrs  bingo.wotwrs  black_market.wotwrs  bonus+.wotwrs  bonus_core.wotwrs  bonus_item_core.wotwrs  bonus_items.wotwrs  bonus_opher_upgrades.wotwrs  fragment_overflow.wotwrs  glades_done.wotwrs  glades_done.wotws  goal_mode_core.wotwrs  jumpgrades.wotwrs  key_hints.wotwrs  knowledge_hints.wotwrs  knowledge_hints.wotws  launch_fragments.wotwrs  launch_from_bingo.wotwrs  launch_on_seir.wotwrs  no_combat.wotwrs  no_cutscenes.wotwrs  no_cutscenes.wotws  no_ks_doors.wotwrs  no_quests.wotwrs  no_rain.wotwrs  no_trials.wotwrs  no_willow_hearts.wotwrs  progress_helper.wotwrs  quests.wotwrs  rapid_hammer_core.wotwrs  rapid_spear_core.wotwrs  rapid_sword_core.wotwrs  relics.wotwrs  seed_core.wotwrs  shrine_hints.wotwrs  skill_velocity.wotwrs  teleporters.wotwrs  tree_hints.wotwrs  (+5 more)
assets/test/: main.wotws
assets/world_presets/: gorlek.json  moki.json  qol.json
temp/: Cargo.toml
temp/src/: main.rs
wotw_seedgen/: Cargo.toml  areas.wotw  build.rs
wotw_seedgen/benches/: bench.rs
wotw_seedgen/src/: common_item.rs  constants.rs  lib.rs  tests.rs
wotw_seedgen/src/generator/: cost.rs  item_pool.rs  mod.rs  placement.rs  seed_core.wotwr  spirit_light.rs  spoiler.rs  string_placeholders.rs
wotw_seedgen/src/inventory/: mod.rs  tests.rs
wotw_seedgen/src/world/: graph.rs  mod.rs  reached.rs  simulate.rs  tests.rs
wotw_seedgen/src/world/player/: is_met.rs  mod.rs  solutions.rs  tests.rs
wotw_seedgen/src/world/uber_states/: mod.rs
wotw_seedgen_assembly/: Cargo.toml
wotw_seedgen_assembly/src/: lib.rs  package.rs
wotw_seedgen_assembly/src/compile/: args.rs  command.rs  mod.rs  package.rs
wotw_seedgen_assets/: Cargo.toml
wotw_seedgen_assets/src/: lib.rs  loc_data.rs  state_data.rs  uber_state_data.rs
wotw_seedgen_cli/: Cargo.toml  build.rs
wotw_seedgen_cli/src/: cli.rs  files.rs  main.rs  seed.rs  stats.rs
wotw_seedgen_data/: Cargo.toml
wotw_seedgen_data/src/: _uber_identifier.rs  equipment.rs  icon.rs  lib.rs  message.rs  position.rs  shard.rs  skill.rs  teleporter.rs  weapon_upgrade.rs  wheel.rs  zone.rs
wotw_seedgen_derive/: Cargo.toml
wotw_seedgen_derive/src/: ast.rs  lib.rs  parse_token.rs
wotw_seedgen_logic_language/: Cargo.toml
wotw_seedgen_logic_language/src/: ast.rs  compile.rs  output.rs
wotw_seedgen_parse/: Cargo.toml
wotw_seedgen_parse/src/: ast.rs  error.rs  helpers.rs  lib.rs  parser.rs  recover.rs  span.rs  tokenizer.rs
wotw_seedgen_parse/src/collections/: mod.rs
wotw_seedgen_plando_compiler/: Cargo.toml
wotw_seedgen_plando_compiler/src/: main.rs
wotw_seedgen_seed/: Cargo.toml
wotw_seedgen_seed/src/: command.rs  display.rs  lib.rs  operation.rs  perfect_derive.rs
wotw_seedgen_seed/src/compile/: args.rs  command.rs  mod.rs
wotw_seedgen_seed_language/: Cargo.toml
wotw_seedgen_seed_language/src/: ast.rs  lib.rs  tests.rs  token.rs  types.rs
wotw_seedgen_seed_language/src/compile/: command.rs  content.rs  evaluate.rs  expression.rs  function.rs  literal.rs  mod.rs  preprocess.rs
wotw_seedgen_seed_language/src/output/: command.rs  common_item.rs  display.rs  event.rs  intermediate.rs  mod.rs  operation.rs
wotw_seedgen_settings/: Cargo.toml
wotw_seedgen_settings/src/: lib.rs  preset.rs  settings.rs
wotw_seedgen_static_assets/: Cargo.toml  build.rs
wotw_seedgen_static_assets/src/: lib.rs
wotw_seedgen_stats/: Cargo.toml
wotw_seedgen_stats/src/: lib.rs  seed_storage.rs
wotw_seedgen_stats/src/analyzers/: mod.rs
