[package]
name = "temp"
version = "0.1.0"
edition = "2021"

# TODO delete

[dependencies]
bendy = { version = "0.3.3", features = ["serde"] }
bincode = "1.3.3"
ciborium = "0.2.1"
flexbuffers = "2.0.0"
postcard = { version = "1.0.8", features = ["alloc"] }
rmp-serde = "1.1.2"
wotw_seedgen_settings = { version = "0.1.0", path = "../wotw_seedgen_settings", features = ["serde"] }
