[package]
name = "wotw_seedgen"
description = "Seed Generator for the Ori and the Will of the Wisps Randomizer"
version = "0.4.1"
authors = ["Sirius Ashling <siriusashling@gmail.com>", "Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2021"
repository = "https://github.com/ori-community/wotw-seedgen"
license = "MIT"

[features]
fs = []

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive", version = "0.1" }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language", version = "0.1" }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings", version = "0.1" }
wotw_seedgen_logic_language = { path = "../wotw_seedgen_logic_language", version = "0.1" }
wotw_seedgen_parse = { path = "../wotw_seedgen_parse", version = "0.1" }
wotw_seedgen_assembly = { path = "../wotw_seedgen_assembly", version = "0.1" }
wotw_seedgen_data = { path = "../wotw_seedgen_data", version = "0.1" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", version = "0.1", features = ["loc_data", "state_data"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rustc-hash = "1.1"
rand = "0.8"
rand_pcg = "0.3"
rand_seeder = "0.2"
log = { version = "0.4", optional = true }
ansi_term = "0.12"
smallvec = { version = "1.6", features = ["const_generics"] }
regex = "1"
num_enum = "0.5"
partition = "0.1"
itertools = "0.10"
# TODO check if used
parse-display = "0.8"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
# TODO is it needed?
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", version = "0.1", features = ["loc_data", "state_data", "uber_state_data", "snippets", "presets"] }

[build-dependencies]
syn = { version = "1.0", features = ["full"] }
vergen = { version = "8", features = [ "git", "gitoxide" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
