[package]
name = "wotw_seedgen_assembly"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO really just check through all the dependencies after this tbh
wotw_seedgen_data = { path = "../wotw_seedgen_data", features = ["serde", "parse_display"] }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11"
rustc-hash = "1.1"
parse-display = "0.8"
derivative = "2.2"
derive-where = "1.2"
brotli = "3.4"
tar = "0.4"
xz2 = "0.1"
