[package]
name = "wotw_seedgen_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.108"
wotw_seedgen = { version = "0.4.1", path = "../wotw_seedgen", features = ["log"] }
wotw_seedgen_assets = { version = "0.1.0", path = "../wotw_seedgen_assets", features = ["loc_data", "state_data", "uber_state_data"] }
wotw_seedgen_logic_language = { version = "0.1.0", path = "../wotw_seedgen_logic_language" }
wotw_seedgen_seed_language = { version = "0.1.0", path = "../wotw_seedgen_seed_language" }
wotw_seedgen_settings = { version = "0.1.0", path = "../wotw_seedgen_settings" }
