[package]
name = "wotw_seedgen_data"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "serde_repr", "decorum/serialize-serde"]
try_from_number = ["num_enum"]
parse_display = ["parse-display"]

[dependencies]
num_enum = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_repr = { version = "0.1", optional = true }
decorum = { version = "0.3", default-features = false, features = ["std"] }
parse-display = { version = "0.8", optional = true }
