[package]
name = "wotw_seedgen_derive"
description = "Derive macro utilities used for wotw_seedgen"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ori-community/wotw-seedgen"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
itertools = "0.10"
proc-macro2 = "1.0"
convert_case = "0.6"
logos-codegen = "0.13"
