[package]
name = "wotw_seedgen_logic_language"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_parse = { path = "../wotw_seedgen_parse", features = ["ordered_float"] }
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["loc_data", "state_data"] }
wotw_seedgen_data = { path = "../wotw_seedgen_data", features = ["parse_display"] }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings", features = ["parse_display"] }
parse-display = "0.8"
smallvec = "1.11"
logos = "0.13"
rustc-hash = "1.1"
# TODO workspace dependency candidate? actually unused in this crate currently though
itertools = "0.11"
ordered-float = "4.2"

[dev-dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data"] }
