[package]
name = "wotw_seedgen_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
logos = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
decorum = { version = "0.3", optional = true, default-features = false, features = ["std"] }
parse-display = "0.8"
itertools = "0.11"
bincode = "1.3"
ariadne = { version = "0.3", optional = true }
derivative = "2.2"

[dev-dependencies]
logos = "0.13"
