[package]
name = "wotw_seedgen_plando_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data", "uber_state_data"] }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_seed = { path = "../wotw_seedgen_seed" }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
ciborium = "0.2.1"
rmp-serde = "1.1.2"
bson = "2.8.1"
bugsalot = "0.2.2"

[[bin]]
name = "compiler"
path = "src/main.rs"
