[package]
name = "wotw_seedgen_plando_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data", "uber_state_data"] }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_assembly = { path = "../wotw_seedgen_assembly" }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
bugsalot = "0.2"
itertools = "0.12"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "compiler"
path = "src/main.rs"
