[package]
name = "wotw_seedgen_seed"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO really just check through all the dependencies after this tbh
wotw_seedgen_data = { path = "../wotw_seedgen_data", features = ["serde", "parse_display"] }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11"
decorum = { version = "0.3", default-features = false, features = ["std"] }
rustc-hash = "1.1"
parse-display = "0.8"
derivative = "2.2.0"
derive-where = "1.2.5"
