[package]
name = "wotw_seedgen_seed_language"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_parse = { package = "wotw_seedgen_parse", path = "../wotw_seedgen_parse", features = ["decorum", "logos", "ariadne"] }
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
wotw_seedgen_data = { path = "../wotw_seedgen_data" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["uber_state_data"] }
logos = "0.13"
ariadne = "0.3"
itertools = "0.11"
decorum = { version = "0.3", default-features = false, features = ["std"] }
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4" # TODO unused
bincode = "1.3"
csv = "1.2"
rand = "0.8"
rand_pcg = "0.3"
parse-display = "0.8"
strsim = "0.10"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
bincode = "1.3"

[dev-dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data", "uber_state_data"] }
