[package]
name = "wotw_seedgen_static_assets"
version = "0.1.0"
edition = "2021"
publish = false

[features]
loc_data = ["wotw_seedgen_assets/loc_data", "serde", "bincode", "lazy_static"]
state_data = ["wotw_seedgen_assets/state_data", "serde", "bincode", "lazy_static"]
uber_state_data = ["wotw_seedgen_assets/uber_state_data", "serde", "bincode", "lazy_static"]
snippets = ["serde", "bincode", "lazy_static", "rustc-hash", "itertools"]
presets = ["wotw_seedgen_settings", "serde", "serde_json", "bincode", "lazy_static", "rustc-hash", "itertools"]

[dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", version = "0.1", optional = true }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings", version = "0.1", optional = true, features = ["serde"] }
lazy_static = { version = "1.4", optional = true }
bincode = { version = "1.3", optional = true }
rustc-hash = { version = "1.1.0", optional = true }

[build-dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", version = "0.1", optional = true }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings", version = "0.1", optional = true, features = ["serde"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
itertools = { version = "0.12.0", optional = true }
